version: "309ffd7-dirty"
opam-version: "2.0"
synopsis: "a simple library for writing gemini servers"
authors: ["—"]
license: "LGPL-2.1"
depends: [
  "dune" {>= "2.7"}
  "uri"
  "text"
  "tls"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "https://git.sr.ht/~hyphens/gemini-server"
